Add External Stylesheet
This way all of the pages styles are in one place, organized well and easily edited.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
           Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
       }
+        
+        a {
+            opacity: 1;
+            text-decoration: none;
+            transition: 0.3s;
+        }
+        
+        a:hover {
+            opacity: 0.6;
+        }
       h1 {
         text-align: center;
         color: navy;
@@ -46,7 +56,7 @@
   </head>
   <!-- I will add the css as an external file later-->
   <body>
-    <h1>Tottenham Media</h1>
+    <h1><a href="index.html">Tottenham Media</a></h1>
     <ul>
       <li><a href="index.html">HOME</a></li>
       <li><a href="performance.html">Season Performance</a></li>
