--- a/index.html
+++ b/index.html
@@ -6,77 +6,34 @@
     <meta name="author" content="Ryan Lee">
     <meta name="description" content="This website is a fan page of Tottenham Hotspur Football Club.">
     <meta name="keywords" content="Ryan Lee, Tottenham, Tottenham Hotspur, football, Premier League, soccer">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <title>Tottenham Media Home Page</title>
     <style>
-      body {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-      }
-        
-        a {
-            opacity: 1;
-            text-decoration: none;
-            transition: 0.3s;
-        }
-        
-        a:hover {
-            opacity: 0.6;
-        }
-      h1 {
-        text-align: center;
-        color: navy;
-      }
-      ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        border: 1px solid #e7e7e7;
-        background-color: navy;
-        text-align: center;
-        border: solid navy;
-      }
-      li {
-        float: left;
-      }
-      li a {
-        display: block;
-        color: white;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-      }
-      img {
-        border-left: navy;
-        border-right: navy;
-        border-bottom: navy;
-        border-style: ridge;
-      }
     </style>
-  </head>
-  <!-- I will add the css as an external file later-->
-  <body>
-    <h1><a href="index.html">Tottenham Media</a></h1>
-    <ul>
-      <li><a href="index.html">HOME</a></li>
-      <li><a href="performance.html">Season Performance</a></li>
-      <li><a href="bestplays.html">Best Spurs Plays</a></li>
-      <li><a href="favs.html">My Favorite Players</a></li>
-      <li><a href="merch.html">Merchandise</a></li>
-      <li><a href="contact.html">Contact Me</a></li>
-    </ul>
-    <p>
-      Welcome! This page is designed to be a Tottenham Hotspur fanpage - a
-      football team in the English Premier League. On this website, you will be
-      able to find information including the team's performance throughout the
-      season, players' statistics, watch amazing plays, and even purchase the
-      team's merchandise!
-    </p>
-    <img
-      src="images/players.jpg"
-      alt="Players wallpaper"
-      title="Spurs Players"
-      height="700"
-    />
-  </body>
-</html>
+</head>
+
+<body>
+    <header>
+        <h1><a href="index.html">Tottenham Media</a></h1>
+        <nav>
+            <ul>
+                <li><a href="performance.html">Season Performance</a></li>
+                <li><a href="bestplays.html">Best Spurs Plays</a></li>
+                <li><a href="favs.html">My Favorite Players</a></li>
+                <li><a href="merch.html">Merchandise</a></li>
+                <li><a href="contact.html">Contact Me</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="hero">
+        <div class="background-image" style="background-image: url(images/image_bg.jpeg);"></div>
+        <div class="hero-content-area">
+            <h2 class="title">Welcome to the Tottenham Hotspur Fanpage!</h2>
+            <p>
+                This page is designed to be a Tottenham Hotspur fanpage - a football team in the English Premier League. On this website, you will be able to find information including the team's performance throughout the season, players' statistics, watch amazing plays, and even purchase the team's merchandise!
+            </p>
+            <img src="images/players.jpg" alt="Players wallpaper" title="Spurs Players" height="700" />
+        </div>
+    </section>
+</body></html>
