--- a/bestplays.html
+++ b/bestplays.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Best Plays</title>
+    <link rel="stylesheet" href="styles/navbar.css">
   </head>
   <body>
     <h1>Tottenham Media</h1>
@@ -14,6 +15,7 @@
       <li><a href="favs.html">My Favorite Players</a></li>
       <li><a href="merch.html">Merchandise</a></li>
       <li><a href="contact.html">Contact Me</a></li>
+      <li><a href="sitemap.html">Sitemap</a></li>
     </ul>
     <h2>Spurs Best Plays</h2>
     <h3>Son 4 goals against Southampton</h3>
