--- a/sitemap.html
+++ b/sitemap.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tottenham Media Sitemap</title>
+    <link rel="stylesheet" href="styles/navbar.css">
 </head>
 <body>
     <h1>Sitemap</h1>
@@ -15,5 +16,6 @@
     <h3>Miscellaneous</h3>
     <p><a href="merch.html">Purchase Merchandise</a></p>
     <p><a href="contact.html">Contact Me</a></p>
+    
 </body>
 </html>
